tests/ui/impl-negative-trait.stderr
error: expected identifier
 --> tests/ui/impl-negative-trait.rs:7:16
  |
7 | #[penum[ (impl !Sized) ]]
  |                ^
